--- a/text.html
+++ b/text.html
@@ -33,6 +33,23 @@
 
       /* disable tag matching */
       .ace_editor .ace_marker-layer .ace_bracket { display: none }
+
+      .main{
+        text-align: center;
+        background-color: #05695C;
+      }
+      
+      #put {
+      width: 80%;
+      font-size: 20px;
+      background-color: #4CAF50; /* Green */
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+    }
     </style>
 
   </head>
@@ -48,14 +65,16 @@
     </div>
 
 
-    <form action="/" method="POST">
-       <label for="file">Select one or more files:</label>
-       <input name="file" id="file" type="file" multiple />
-       <label for="commit-title">Commit title:</label>
-       <input id="commit-title" name="commit-title" type="text" placeholder="commit"/>
-       <input type="text" id="fileName" placeholder="fileName">
-       <input type="submit" />
-    </form>
+    <div class="main">
+      <form action="/" method="POST">
+         <label for="file">Select one or more files:</label>
+         <input name="file" id="file" type="file" multiple />
+         <label for="commit-title">Commit title:</label>
+         <input id="commit-title" name="commit-title" type="text" placeholder="commit"/>
+         <input type="text" id="fileName" placeholder="fileName">
+         <button type="submit" id="put">Put online</button>
+      </form>
+    </div>
 
   </body>
   <script>
